--- a/.github/workflows/slackTest.yml
+++ b/.github/workflows/slackTest.yml
@@ -5,10 +5,10 @@ jobs:
     name: Post to a Slack channel
     runs-on: windows-latest
     id: slack
-    uses: slackapi/slack-github-action@v1.21.0
-      with:
-      channel-id: 'C03V4JPBFM1'
-      #slack-message: "GitHub build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
-      slack-message: "Test Message 001"
-      env:
-      SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+    - uses: slackapi/slack-github-action@v1.21.0
+        with:
+        channel-id: 'C03V4JPBFM1'
+        #slack-message: "GitHub build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+        slack-message: "Test Message 001"
+        env:
+        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
