--- a/.github/workflows/slackTest.yml
+++ b/.github/workflows/slackTest.yml
@@ -5,12 +5,50 @@ jobs:
     name: Post to a Slack channel
     runs-on: windows-latest
     steps:
-      - name: Post to a Slack channel
+      - name: Update Slack Message
         id: slack
         uses: slackapi/slack-github-action@v1.21.0
         with:
-          channel-id: 'C03V4JPBFM1'
-          #slack-message: "GitHub build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
-          slack-message: "Test Message 001"
+          channel-id: "C03V4JPBFM1"
+          payload: |
+            {
+              "text": "Deployment started (In Progress)",
+              "attachments": [
+                {
+                  "pretext": "Deployment started",
+                  "color": "dbab09",
+                  "fields": [
+                    {
+                      "title": "Status",
+                      "short": true,
+                      "value": "In Progress"
+                    }
+                  ]
+                }
+              ]
+            }
         env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN}}
+      - uses: slackapi/slack-github-action@v1.21.0
+        with:
+          channel-id: "C03V4JPBFM1"
+          update-ts: ${{ steps.slack.outputs.ts }}
+          payload: |
+            {
+              "text": "Deployment finished (Completed)",
+              "attachments": [
+                {
+                  "pretext": "Deployment finished",
+                  "color": "28a745",
+                  "fields": [
+                    {
+                      "title": "Status",
+                      "short": true,
+                      "value": "Completed"
+                    }
+                  ]
+                }
+              ]
+            }
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN}}
