--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,34 +1,34 @@
-name: Initial Build Workflow
-on: push
-jobs:
-  Build-Unity-Version: 
-    name: Build Unity Project
-    runs-on: windows-latest
-    steps:
-      #Checkout code without LFS
-      - uses: actions/checkout@v3
-        name: Checkout Code
-
-      #Cache
-      - uses: actions/cache@v3
-        with:
-          path: Library
-          key: Library-${{ hashfiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
-          restore-keys: |
-            Library-
-
-      #Build
-      - name: Build Project
-        uses: game-ci/unity-builder@v2
-        env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-        with:
-          targetPlatform: windows
-
-      #Output
-      - uses: actions/upload-artifact@v2
-        with:
-          name: Build
-          path: build
+#name: Initial Build Workflow
+#on: push
+#jobs:
+#  Build-Unity-Version: 
+#    name: Build Unity Project
+#    runs-on: windows-latest
+#    steps:
+#      #Checkout code without LFS
+#      - uses: actions/checkout@v3
+#        name: Checkout Code
+#
+#      #Cache
+#      - uses: actions/cache@v3
+#        with:
+#          path: Library
+#          key: Library-${{ hashfiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
+#          restore-keys: |
+#            Library-
+#
+#      #Build
+#      - name: Build Project
+#        uses: game-ci/unity-builder@v2
+#        env:
+#          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+#          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+#          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+#        with:
+#          targetPlatform: windows
+#
+#      #Output
+#      - uses: actions/upload-artifact@v2
+#        with:
+#          name: Build
+#          path: build
