--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
 
 jobs:
-  testRunner001:
+  testRunner:
     name: Test all modes 002
     runs-on: ubuntu-latest
 #    strategy:
