--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,15 +6,10 @@ env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
 
 jobs:
+
   testRunner:
-    name: Test all modes 002
+    name: Test all modes
     runs-on: ubuntu-latest
-#    strategy:
-#      fail-fast: false
-#      matrix:
-#        testMode:
-#          - EditMode
-#          - PlayMode
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -34,6 +29,7 @@ jobs:
           git lfs pull
           git add .
           git reset --hard
+
       - name: Restore Library cache
         uses: actions/cache@v2
         with:
@@ -41,20 +37,17 @@ jobs:
           key: Library-test-project
           restore-keys: |
             Library-test-project-
-            Library-
+           Library-
 
-      - name: Run tests
-        uses: webbertakken/unity-test-runner@v2
-        id: testRunner
-        with:
-          projectPath: C:\Users\User-Pc\Desktop\Synology\Renderheads\Repos\test_GithubActions
-          githubToken: ${{ secrets.GH_TOKEN }}
-          testMode: all
+     - uses: webbertakken/unity-test-runner@v2
+       id: testRunner
+       with:
+         testMode: all
 
-      - uses: actions/upload-artifact@v2
-        with:
-          name: Test results (all modes)
-          path: ${{ steps.testRunner.outputs.artifactsPath }}
+     - uses: actions/upload-artifact@v2
+       with:
+         name: Test results (all modes)
+         path: ${{ steps.testRunner.outputs.artifactsPath }}
 
 #  buildWebGL:
 #    needs: testRunner
@@ -81,6 +74,7 @@ jobs:
 #          git lfs pull
 #          git add .
 #          git reset --hard
+#
 #      - name: Restore Library cache
 #        uses: actions/cache@v2
 #        with:
@@ -89,7 +83,8 @@ jobs:
 #          restore-keys: |
 #            Library-build-
 #            Library-
-#      - uses: game-ci/unity-builder@v2
+#
+#      - uses: webbertakken/unity-builder@v2
 #        with:
 #          targetPlatform: WebGL
 #
@@ -97,49 +92,51 @@ jobs:
 #        with:
 #          name: build-WebGL
 #          path: build/WebGL
+#
+ buildWindows:
+   needs: testRunner
+   name: Build for Windows 🖥️
+   runs-on: ubuntu-latest
+   strategy:
+     fail-fast: false
+   steps:
+     - name: Checkout code
+       uses: actions/checkout@v2
 
-  buildWindows:
-    needs: testRunner
-    name: Build for Windows 🖥️
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+     - name: Create LFS file list
+       run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
 
-      - name: Create LFS file list
-        run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
+     - name: Restore LFS cache
+       uses: actions/cache@v2
+       id: lfs-cache
+       with:
+         path: .git/lfs
+         key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
 
-      - name: Restore LFS cache
-        uses: actions/cache@v2
-        id: lfs-cache
-        with:
-          path: .git/lfs
-          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
+     - name: Git LFS Pull
+       run: |
+         git lfs pull
+         git add .
+         git reset --hard
 
-      - name: Git LFS Pull
-        run: |
-          git lfs pull
-          git add .
-          git reset --hard
-      - name: Restore Library cache
-        uses: actions/cache@v2
-        with:
-          path: Library
-          key: Library-build-StandaloneWindows64
-          restore-keys: |
-            Library-build-
-            Library-
-      - uses: game-ci/unity-builder@v2
-        with:
-          targetPlatform: StandaloneWindows64
+     - name: Restore Library cache
+       uses: actions/cache@v2
+       with:
+         path: Library
+         key: Library-build-StandaloneWindows64
+         restore-keys: |
+           Library-build-
+           Library-
 
-      - uses: actions/upload-artifact@v2
-        with:
-          name: build-StandaloneWindows64
-          path: build/StandaloneWindows64
+     - uses: webbertakken/unity-builder@v2
+       with:
+         targetPlatform: StandaloneWindows64
 
+     - uses: actions/upload-artifact@v2
+       with:
+         name: build-StandaloneWindows64
+         path: build/StandaloneWindows64
+#
 #  buildAndroid:
 #    needs: testRunner
 #    name: Build for Android 📱
@@ -165,6 +162,7 @@ jobs:
 #          git lfs pull
 #          git add .
 #          git reset --hard
+#
 #      - name: Restore Library cache
 #        uses: actions/cache@v2
 #        with:
@@ -173,7 +171,8 @@ jobs:
 #          restore-keys: |
 #            Library-build-
 #            Library-
-#      - uses: game-ci/unity-builder@v2
+#
+#      - uses: webbertakken/unity-builder@v2
 #        with:
 #          targetPlatform: Android
 #
@@ -183,20 +182,25 @@ jobs:
 #          path: build/Android
 
 
-  deployPages:
-    name: Deploy to Github Pages 🚀
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+ deployPages:
+   needs: buildWebGL
+   name: Deploy to Github Pages 🚀
+   runs-on: ubuntu-latest
+   steps:
+     - name: Checkout code
+       uses: actions/checkout@v2
 
-      - uses: actions/download-artifact@v2
-        with:
-          name: build-WebGL
-          path: build
+     - uses: actions/download-artifact@v2
+       with:
+         name: build-WebGL
+         path: build
 
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.4
-        with:
-          branch: gh-pages
-          folder: build/WebGL
+     - name: Display structure of root files
+       run: ls -R
+       working-directory: build/WebGL
+
+     - name: Deploy 🚀
+       uses: JamesIves/github-pages-deploy-action@4.1.4
+       with:
+         branch: gh-pages
+         folder: build/WebGL
