--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
        id: testRunner
        with:
          testMode: all
-         path: ProjectSettings\ProjectVersion.txt
+         projectPath: ProjectSettings\ProjectVersion.txt
 
      - uses: actions/upload-artifact@v2
        with:
