--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,14 +2,16 @@ name: GameCI Template 🎮
 
 on: push
 
-- uses: game-ci/unity-test-runner@v2
-  env:
-    UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-  with:
-    projectPath: C:\Users\User-Pc\Desktop\Synology\Renderheads\Repos\test_GithubActions\github_actions_test\ProjectSettings
-    githubToken: ${{ secrets.GH_TOKEN }}
-
 jobs:
+
+  newJob:
+    - uses: game-ci/unity-test-runner@v2
+      env:
+        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+      with:
+        projectPath: C:\Users\User-Pc\Desktop\Synology\Renderheads\Repos\test_GithubActions\github_actions_test\ProjectSettings
+        githubToken: ${{ secrets.GH_TOKEN }}
+
  testRunner:
    name: Test all modes 📝
    runs-on: ubuntu-latest
