--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -18,8 +18,10 @@ jobs:
       # Cache
       - uses: actions/cache@v2
         with:
-          path: Library
-          key: Library
+          #path: C:\Users\User-Pc\Desktop\Synology\Renderheads\Repos\test_GithubActions\github_actions_test
+          path: https://github.com/jAdriaanse/test_GithubActions/github_actions_test/ProjectSettings/ProjectVersion.txt
+          key: Library-test_GithubActions-StandaloneWindows
+          restore-keys: | Library-test_GithubActions-Library
 
       # Build
       - name: Build project
