--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/cache@v2
         with:
           #path: C:\Users\User-Pc\Desktop\Synology\Renderheads\Repos\test_GithubActions\github_actions_test
-          path: https://github.com/jAdriaanse/test_GithubActions/github_actions_test/ProjectSettings/ProjectVersion.txt
+          path: https://github.com/jAdriaanse/test_GithubActions/github_actions_test/ProjectSettings/ProjectVersion
           key: Library-test_GithubActions-StandaloneWindows
 
       # Build
