--- a/.github/workflows/test002.yml
+++ b/.github/workflows/test002.yml
@@ -37,6 +37,7 @@ jobs:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
+          unityVersion: 2019.4.23f1
           targetPlatform: StandaloneWindows
 
       # Output
