Updated target platform
Update on previous commit: The target platform is indeed the actual target platform but also names the build for some reason

--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -34,7 +34,7 @@ jobs:
           # UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
         with:
           unityVersion: 2019.4.23f1
-          targetPlatform: Metavoidal
+          targetPlatform: StandaloneWindows64
         # Return License (Un-Comment if you're using a pro license)
         #- name: Return license
         #  uses: game-ci/unity-return-license@v1
