New Slack Test 03

--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -22,33 +22,6 @@ jobs:
           path: https://github.com/jAdriaanse/test_GithubActions/github_actions_test
           key: Library-test_GithubActions-StandaloneWindows
 
-      # Posting an "in progress" message to slack
-      - name: Post in progress to a Slack channel
-        id: slack
-        uses: slackapi/slack-github-action@v1.21.0
-        with:
-          channel-id: "C03V4JPBFM1"
-          payload: |
-            {
-              "text": "Deployment started (In Progress)",
-              "attachments": [
-                {
-                  "pretext": "Deployment status",
-                  "color": "dbab09",
-                  "fields": [
-                    {
-                      "title": "Status",
-                      "short": true,
-                      "value": "Build in Progress:"
-                      "text": "https://github.com/jAdriaanse/test_GithubActions/commit/$GITHUB_SHA/checks"
-                    }
-                  ]
-                }
-              ]
-            } 
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN}}
-
       # Build
       - name: Build project
         uses: game-ci/unity-builder@v2
@@ -73,8 +46,33 @@ jobs:
           name: Build
           path: build
 
+      # Posting an "in progress" message to slack
+      - name: Post status to a Slack channel
+        id: slack
+        uses: slackapi/slack-github-action@v1.21.0
+        with:
+          channel-id: "C03V4JPBFM1"
+          payload: |
+            {
+              "text": "Deployment started (In Progress)",
+              "attachments": [
+                {
+                  "pretext": "Deployment status",
+                  "color": "dbab09",
+                  "fields": [
+                    {
+                      "title": "Status",
+                      "short": true,
+                      "value": "Build in Progress:"
+                      "text": "https://github.com/jAdriaanse/test_GithubActions/commit/$GITHUB_SHA/checks"
+                    }
+                  ]
+                }
+              ]
+            } 
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN}}
       # Posting an "completed" message to slack
-      - name: Post  completed to a Slack channel
         uses: slackapi/slack-github-action@v1.21.0
         with:
           channel-id: "C03V4JPBFM1"
