--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -15,6 +15,33 @@ jobs:
         with:
           lfs: true
 
+      # Posting an "in progress" message to slack
+      - name: Post status to a Slack channel
+        id: slack
+        uses: slackapi/slack-github-action@v1.21.0
+        with:
+          channel-id: "C03V4JPBFM1"
+          payload: |
+            {
+              "text": "Deployment started (In Progress)",
+              "attachments": [
+                {
+                  "pretext": "Deployment status",
+                  "color": "dbab09",
+                  "fields": [
+                    {
+                      "title": "Status",
+                      "short": true,
+                      "value": "Build in Progress:"
+                      "text": "https://github.com/jAdriaanse/test_GithubActions/commit/$GITHUB_SHA/checks"
+                    }
+                  ]
+                }
+              ]
+            } 
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN}}
+
       # Cache
       - uses: actions/cache@v2
         with:
@@ -46,37 +73,12 @@ jobs:
           name: Build
           path: build
 
-      # Posting an "in progress" message to slack
-      - name: Post status to a Slack channel
-        id: slack
-        uses: slackapi/slack-github-action@v1.21.0
-        with:
-          channel-id: "C03V4JPBFM1"
-          payload: |
-            {
-              "text": "Deployment started (In Progress)",
-              "attachments": [
-                {
-                  "pretext": "Deployment status",
-                  "color": "dbab09",
-                  "fields": [
-                    {
-                      "title": "Status",
-                      "short": true,
-                      "value": "Build in Progress:"
-                      "text": "https://github.com/jAdriaanse/test_GithubActions/commit/$GITHUB_SHA/checks"
-                    }
-                  ]
-                }
-              ]
-            } 
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN}}
+      
       # Posting an "completed" message to slack
       - uses: slackapi/slack-github-action@v1.21.0
         with:
           channel-id: "C03V4JPBFM1"
-          update-ts: ${{ steps.slack.outputs.ts }}
+          update-ts: ${{ steps.Post status to a Slack channel.outputs.ts }}
           payload: |
             {
               "text": "Deployment finished",
