--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -78,7 +78,7 @@ jobs:
       - uses: slackapi/slack-github-action@v1.21.0
         with:
           channel-id: "C03V4JPBFM1"
-          update-ts: ${{ steps.Post status to a Slack channel.outputs.ts }}
+          update-ts: ${{ steps.slack.ts }}
           payload: |
             {
               "text": "Deployment finished",
@@ -97,5 +97,5 @@ jobs:
                 }
               ]
             }
-          env:
-            SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN}}
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN}}
