--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -23,17 +23,16 @@ jobs:
           channel-id: "C03V4JPBFM1"
           payload: |
             {
-              "text": "Deployment started (In Progress)",             
+              "text": "Deployment Status",             
               "attachments": [
                 {
-                  "pretext": "Deployment status",
+                  "pretext": "Deployment in progress",
                   "color": "dbab09",
                   "fields": [
                     {
                       "title": "Status",
                       "short": true,
-                      "value": "Build in Progress:",
-                      "text": "https://github.com/jAdriaanse/test_GithubActions/commit/$GITHUB_SHA/checks"
+                      "value": "Build in Progress: \\n https://github.com/jAdriaanse/test_GithubActions/commit/$GITHUB_SHA/checks"
                     }
                   ]
                 }
@@ -81,17 +80,16 @@ jobs:
           update-ts: ${{ steps.slack.ts }}
           payload: |
             {
-              "text": "Deployment finished",
+              "text": "Deployment Status",
               "attachments": [
                 {
-                  "pretext": "Deployment status",
+                  "pretext": "Deployment finished",
                   "color": "28a745",
                   "fields": [
                     {
                       "title": "Status",
                       "short": true,
-                      "value": "Build Completed:",
-                      "text": "https://github.com/jAdriaanse/test_GithubActions/commit/$GITHUB_SHA/checks"
+                      "value": "Build Completed: \\n https://github.com/jAdriaanse/test_GithubActions/commit/$GITHUB_SHA/checks"
                     }
                   ]
                 }
