--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -23,10 +23,10 @@ jobs:
           channel-id: "C03V4JPBFM1"
           payload: |
             {
-              "text": "Deployment Status",             
+              "text": "Deployment Started",
               "attachments": [
                 {
-                  "pretext": "Deployment in progress",
+                  "pretext": "Build In Progress",
                   "color": "dbab09",
                   "fields": [
                     {
@@ -77,13 +77,13 @@ jobs:
       - uses: slackapi/slack-github-action@v1.21.0
         with:
           channel-id: "C03V4JPBFM1"
-          update-ts: ${{ steps.slack.ts }}
+          update-ts: ${{ steps.slack.outputs.ts }}
           payload: |
             {
-              "text": "Deployment Status",
+              "text": "Deployment Finished",
               "attachments": [
                 {
-                  "pretext": "Deployment finished",
+                  "pretext": "Build Completed",
                   "color": "28a745",
                   "fields": [
                     {
