--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -16,7 +16,8 @@ jobs:
           lfs: true
 
       # Cache
-      - uses: actions/cache@v2
+      - name: Cache Library
+        uses: actions/cache@v3
         with:
           path: "./github_actions_test/Library"
           key: ${{ runner.os }}-library
