--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -21,6 +21,14 @@ jobs:
           projectPath: "./github_actions_test/Library"
           key: Library-test_GithubActions-StandaloneWindows
 
+      # Test
+      - name: Run tests
+        uses: game-ci/unity-test-runner@v2
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        with:
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+
       # Build
       - name: Build project
         uses: game-ci/unity-builder@v2
