Updated projectPath TestRunner

--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -54,6 +54,7 @@ jobs:
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         with:
+          projectPath: "./github_actions_test"
           githubToken: ${{ secrets.GITHUB_TOKEN }}
 
       # Build
