--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -74,7 +74,9 @@ jobs:
 
       
       # Posting an "completed" message to slack
-      - uses: slackapi/slack-github-action@v1.21.0
+      - name: Post success to a Slack channel
+        if: ${{ success() }}
+        uses: slackapi/slack-github-action@v1.21.0
         with:
           channel-id: "C03V4JPBFM1"
           update-ts: ${{ steps.slack.outputs.ts }}
@@ -90,6 +92,60 @@ jobs:
                       "title": "Status",
                       "short": true,
                       "value": "Build Completed: \n https://github.com/jAdriaanse/test_GithubActions/actions/runs/${{ github.run_id }}"
+                    }
+                  ]
+                }
+              ]
+            }
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN}}
+
+      # Posting an "cancelled" message to slack
+      - name: Post cancel to a Slack channel
+        if: ${{ cancelled() }}
+        uses: slackapi/slack-github-action@v1.21.0
+        with:
+          channel-id: "C03V4JPBFM1"
+          update-ts: ${{ steps.slack.outputs.ts }}
+          payload: |
+            {
+              "text": "Deployment Canceled",
+              "attachments": [
+                {
+                  "pretext": "Build Canceled",
+                  "color": "8b0000",
+                  "fields": [
+                    {
+                      "title": "Status",
+                      "short": true,
+                      "value": "Build Canceled: \n https://github.com/jAdriaanse/test_GithubActions/actions/runs/${{ github.run_id }}"
+                    }
+                  ]
+                }
+              ]
+            }
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN}}
+
+      # Posting an "failure" message to slack
+      - name: Post failure to a Slack channel
+        if: ${{ failure() }}
+        uses: slackapi/slack-github-action@v1.21.0
+        with:
+          channel-id: "C03V4JPBFM1"
+          update-ts: ${{ steps.slack.outputs.ts }}
+          payload: |
+            {
+              "text": "Deployment Failed",
+              "attachments": [
+                {
+                  "pretext": "Build Failed",
+                  "color": "8b0000",
+                  "fields": [
+                    {
+                      "title": "Status",
+                      "short": true,
+                      "value": "Build Failed: \n https://github.com/jAdriaanse/test_GithubActions/actions/runs/${{ github.run_id }}"
                     }
                   ]
                 }
