--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -1,5 +1,11 @@
 name: Build Project
+
 on: [push]
+
+env: 
+  ITCH_USERNAME: my-username
+  ITCH_GAME_ID: my-game-id
+  
 jobs:
   build:
     name: Build Project
@@ -149,3 +155,27 @@ jobs:
             }
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN}}
+  
+  # publish:
+  #   name: Upload to Itch
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     fail-fast: true
+  #     matrix:
+  #       channel:
+  #         - windows
+  #   runs-on: ubuntu-latest
+  #   name: Deploy - Itch.io ${{ matrix.template }}
+  #   steps:
+  #     - uses: actions/download-artifact@v2.0.8
+  #       with:
+  #         name: ${{ matrix.channel }}
+  #         path: build/${{ matrix.channel }}
+  #     - uses: KikimoraGames/itch-publish@v0.0.3
+  #       with:
+  #         butlerApiKey: ${{ secrets.BUTLER_API_KEY }}
+  #         gameData: ./build/${{ matrix.template }}
+  #         itchUsername: ${{ env.ITCH_USERNAME }}
+  #         itchGameId: ${{ env.ITCH_GAME_ID }}
+  #         buildChannel: ${{ matrix.channel }}
+  #         buildNumber: ${{ needs.version.outputs.version_hash }}
