--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -3,7 +3,7 @@ on: [push]
 jobs:
   build:
     name: Build Project
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Windows]
     # This stops builds that are in-progress once a new commit comes in
     concurrency: 
       group: unity-build
