--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -56,7 +56,9 @@ jobs:
 
       # Build
       - name: Build project
-        uses: game-ci/unity-builder@v2
+        #uses: game-ci/unity-builder@v2
+        runs: .github/workflows/BuildWindows.sh
+        shell: sh
         env:
           # Comment this out if you're using a pro license
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
