--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -59,16 +59,20 @@ jobs:
         #uses: game-ci/unity-builder@v2
         run: .github/workflows/BuildWindows.sh
         shell: sh
-        env:
+        #env:
           # Comment this out if you're using a pro license
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+
+          #UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+
           # Un-Comment the following lines if you're using a pro license
           # UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           # UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
           # UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
-        with:
-          projectPath: "./github_actions_test"
-          targetPlatform: StandaloneWindows64
+
+        # with:
+        #   projectPath: "./github_actions_test"
+        #   targetPlatform: StandaloneWindows64
+
         # Return License (Un-Comment if you're using a pro license)
         #- name: Return license
         #  uses: game-ci/unity-return-license@v1
