--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -57,7 +57,7 @@ jobs:
       # Build
       - name: Build project
         #uses: game-ci/unity-builder@v2
-        run: .github/workflows/BuildWindows.sh
+        run: ./.github/workflows/BuildWindows.sh
         shell: sh
         #env:
           # Comment this out if you're using a pro license
@@ -164,5 +164,5 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN}}
   
       - name: Upload to itch.io
-        run: .github/workflows/PublishWindowsBuild.sh
+        run: ./.github/workflows/PublishWindowsBuild.sh
         shell: sh
