--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -57,8 +57,7 @@ jobs:
       # Build
       - name: Build project
         #uses: game-ci/unity-builder@v2
-        run: sh ./.github/workflows/BuildWindows.sh
-        shell: sh
+        run: powershell ./.github/workflows/BuildWindows.powershell
         #env:
           # Comment this out if you're using a pro license
 
@@ -164,5 +163,4 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN}}
   
       - name: Upload to itch.io
-        run: sh ./.github/workflows/PublishWindowsBuild.sh
-        shell: sh
+        run: powershell ./.github/workflows/PublishWindowsBuild.powershell
