--- a/.github/workflows/test001.yml
+++ b/.github/workflows/test001.yml
@@ -58,8 +58,8 @@ jobs:
 
       # Build
       - name: Build project
-        #uses: game-ci/unity-builder@v2
-        run: ./.github/workflows/BuildWindows.powershell
+        uses: game-ci/unity-builder@v2
+        #run: ./.github/workflows/BuildWindows.powershell
         shell: powershell
         #env:
           # Comment this out if you're using a pro license
